Replaced deprecated Interger constuctors with Integer.valueOf