@@ -115,7 +115,7 @@ public class Component extends ScopeKeyword
                 p_par.file.write(" back ");
             }
             int rotation = (int) Math.round(p_component.get_rotation_in_degree());
-            p_par.file.write((new Integer(rotation).toString()));
+            p_par.file.write((Integer.valueOf(rotation).toString()));
         }
         if (p_component.position_fixed)
         {
