@@ -194,7 +194,7 @@ public class Package
             if (rotation != 0)
             {
                 p_par.file.write("(rotate ");
-                p_par.file.write((new Integer(rotation)).toString());
+                p_par.file.write((Integer.valueOf(rotation)).toString());
                 p_par.file.write(")");
             }
             p_par.file.write(")");
