@@ -107,7 +107,7 @@ public class Polygon extends Shape
         p_file.write("polygon ");
         p_identifier_type.write(this.layer.name, p_file);
         p_file.write(" ");
-        p_file.write((new Integer(0)).toString());
+        p_file.write((Integer.valueOf(0)).toString());
         int corner_count = coor.length/ 2;
         for (int i = 0; i < corner_count; ++i)
         {
@@ -125,7 +125,7 @@ public class Polygon extends Shape
         p_file.write("polygon ");
         p_identifier_type.write(this.layer.name, p_file);
         p_file.write(" ");
-        p_file.write((new Integer(0)).toString());
+        p_file.write((Integer.valueOf(0)).toString());
         int corner_count = coor.length/ 2;
         for (int i = 0; i < corner_count; ++i)
         {
