@@ -203,7 +203,7 @@ public class Logfile
         {
             try
             {
-                this.file_writer.write((new Integer(p_int)).toString());
+                this.file_writer.write((Integer.valueOf(p_int)).toString());
                 this.file_writer.write("\n");
             }
             catch (IOException e2)
